results/SpecGenBench/0-shot/log-NumberOfCutsSeq-2023_11_28_23_43_54.txt
class NumberOfCutsSeq {
    //@ requires n >= 0;
    //@ ensures \result >= 0;
    public int numberOfCuts(int n) {
        //@ assert n >= 0;
        //@ assert n == \old(n);
        //@ assert \result == ((n == 1) ? 0 : ((n % 2 == 0) ? (n / 2) : n));
        
        return ((n == 1) ? 0 : ((n % 2 == 0) ? (n / 2) : n));
        
        //@ assert \result == ((n == 1) ? 0 : ((n % 2 == 0) ? (n / 2) : n));
        //@ assert \result >= 0;
    }
}
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:7: error: A \result expression may not be in a assert clause
        //@ assert \result == ((n == 1) ? 0 : ((n % 2 == 0) ? (n / 2) : n));
                    ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:11: error: A \result expression may not be in a assert clause
        //@ assert \result == ((n == 1) ? 0 : ((n % 2 == 0) ? (n / 2) : n));
                    ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:12: error: A \result expression may not be in a assert clause
        //@ assert \result >= 0;
                    ^
3 errors

